--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title></title>
 </head>
 <body>
-<h1 style="color:blue;">Hello world</h1>
+<h1 style="color:green;">Hello world</h1>
 </body>
 </html>
