--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
+<link rel="stylesheet" href="style.css" type="text/css">
+<script src="https://kit.fontawesome.com/dd0ff15abc.js" crossorigin="anonymous"></script>
+<link href="https://fonts.gstatic.com" rel="preconnect">
+<link href="https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1>Hello world</h1>
+<h1>Piotr Kupis</h1>
+
 </body>
 </html>
