Index.html initial commit

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1>Piotr Kupis</h1>
+<div>Piotr Kupis</div>
 <div>
-    <img src="photo.png">
+    <img class="prof" src="photo.png">
 </div>
 </body>
 </html>
