Index.html initial commit

--- a/index.html
+++ b/index.html
@@ -8,9 +8,70 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-<div>Piotr Kupis</div>
-<div>
-    <img class="prof" src="photo.png">
+<div class="bok">
+    <div>
+        <img class="profile" src="photo.png">
+        <div class="head">DANE OSOBOWE</div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fas fa-user-check"></i>
+            </div>
+            <div class="text1">Piotr Kupis</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fas fa-home"></i>
+            </div>
+            <div class="text1">Kraków, Polska</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fas fa-phone-alt"></i>
+            </div>
+            <div class="text1">123 564 897</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fas fa-envelope"></i>
+            </div>
+            <div class="text1">wood@gmail.com</div>
+        </div>
+        <div class="head">SOCIAL MEDIA</div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fab fa-instagram"></i>
+            </div>
+            <div class="text1">gruszkinn</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fab fa-facebook-square"></i>
+            </div>
+            <div class="text1">Piotr Kupis</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fab fa-twitter-square"></i>
+            </div>
+            <div class="text1">gruszkinn</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fab fa-linkedin"></i>
+            </div>
+            <div class="text1">piotr_kupis</div>
+        </div>
+    </div>
+</div>
+<div class="main">
+    <div class="name">Piotr Kupis</div>
+    <div class="description">Jestem absolwentem liceum, 
+        dążącym do zdobycia pierwszego doświadczenia zawodowego. 
+        Sprawnie poruszam się w Internecie i znam obsługę Google AdWords 
+        i Google Analytics. Świetnie odnajduję się w świecie nowych technologii. 
+        Szukam możliwości rozwoju jako specjalista ds. pozycjonowania stron.
+    </div>
+    
 </div>
 </body>
 </html>
