--- a/index.html
+++ b/index.html
@@ -61,15 +61,122 @@
             </div>
             <div class="text1">piotr_kupis</div>
         </div>
+        <div class="head">ZAINTERESOWANIA</div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fas fa-futbol"></i>
+            </div>
+            <div class="text1">piłka nożna</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fas fa-car"></i>
+            </div>
+            <div class="text1">motoryzacja</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fas fa-fish"></i>
+            </div>
+            <div class="text1">wędkarstwo</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon"> 
+                <i class="fas fa-desktop"></i>
+            </div>
+            <div class="text1">informatyka</div>
+        </div>
     </div>
 </div>
 <div class="main">
     <div class="name">Piotr Kupis</div>
-    <div class="description">Jestem absolwentem liceum, 
+    <div class="description">
+        <div class="desc">Jestem absolwentem liceum, 
         dążącym do zdobycia pierwszego doświadczenia zawodowego. 
         Sprawnie poruszam się w Internecie i znam obsługę Google AdWords 
         i Google Analytics. Świetnie odnajduję się w świecie nowych technologii. 
         Szukam możliwości rozwoju jako specjalista ds. pozycjonowania stron.
+        </div>
+    </div>
+    <div class="head2">WYKSZTAŁCENIE</div>
+    <div class="school">
+    <div class="text2">Program licencjacki na kierunku komunikacja, Uniwersytet Warszawski</div>
+    <div class="date">2015 - 2020</div>
+    <div class="marks">
+        <div class="li_wrap">
+            <div class="icon2">
+            <i class="fas fa-check-circle"></i>
+            </div>
+            <div class="desc">Studia w celu zdobycia tytułu naukowego w zakresie komunikacji</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon2">
+            <i class="fas fa-check-circle"></i>
+            </div>
+            <div class="desc">Średnia ocen: 3,80</div>
+        </div>
+    </div>
+    </div>
+    <div class="school">
+        <div class="text2">Dyplom ukończenia szkoły średniej, Liceum Ogólnokształcące w Łodzi</div>
+        <div class="date">2012 - 2015</div>
+        <div class="marks">
+            <div class="li_wrap">
+                <div class="icon2">
+                <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="desc">Dyplom z wyróżnieniem</div>
+            </div>
+            <div class="li_wrap">
+                <div class="icon2">
+                <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="desc">Przewodniczący Klubu Dziennikarskiego</div>
+            </div>
+        </div>
+    </div>
+    <div class="head2">HISTORIA ZATRUDNIENIA</div>
+    <div class="school">
+        <div class="text2">Firma ZEG Warszawa</div>
+        <div class="date">2018 - 2021</div>
+        <div class="marks">
+            <div class="li_wrap">
+                <div class="icon2">
+                <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="desc">Prowadzenie kalendarza korespondencji</div>
+            </div>
+            <div class="li_wrap">
+                <div class="icon2">
+                <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="desc">Korespondencja w języku angielskim</div>
+            </div>
+        </div>
+    </div>
+    <div class="school">
+    <div class="text2">Sprzedawca, Księgarnia Biały Kruk, Radom</div>
+    <div class="date">2015 - 2018</div>
+    <div class="marks">
+        <div class="li_wrap">
+            <div class="icon2">
+            <i class="fas fa-check-circle"></i>
+            </div>
+            <div class="desc">Witanie klientów i pomoc w znajdywaniu poszukiwanych książek</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon2">
+            <i class="fas fa-check-circle"></i>
+            </div>
+            <div class="desc">Proponowanie dzieł literatury opartych na potrzebach klientów</div>
+        </div>
+        <div class="li_wrap">
+            <div class="icon2">
+            <i class="fas fa-check-circle"></i>
+            </div>
+            <div class="desc">Układanie książek, a także przestrzeganie zasad i realizacja misji księgarni</div>
+        </div>
+    </div>
     </div>
     
 </div>
