Index.html initial commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="bok">
     <div>
-        <img class="profile" src="photo.png">
+        <a href="https://www.instagram.com/gruszkin/"><img class="profile" src="photo.png"></a>
         <div class="head">DANE OSOBOWE</div>
         <div class="li_wrap">
             <div class="icon"> 
