Index.html initial commit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="icon"> 
                 <i class="fas fa-user-check"></i>
             </div>
-            <div class="text1">Piotr Kupis</div>
+            <div class="text1">Marek Kupis</div>
         </div>
         <div class="li_wrap">
             <div class="icon"> 
