Index.html initial commit

--- a/google/index.html
+++ b/google/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class = "srodek">
             <div class = "szukaj">
-                <a href=""> <img class ="szukaj_icon" src = "Google_Magnifying_Glass.svg"></a>
+                <a href="https://pl.pornhub.com/view_video.php?viewkey=ph5fb77c816179b&t=394"> <img class ="szukaj_icon" src = "Google_Magnifying_Glass.svg"></a>
                 <input class ="wpis" type="text">
                 <a href=""> <img class ="klawa_icon"  src = "Keyboard.png"></a>
                 <a href=""> <img class ="mic_icon"  src = "Google_mic.svg"></a>
