Index.html initial commit

--- a/google/index.html
+++ b/google/index.html
@@ -80,7 +80,8 @@
                 </div>
             </div>
             <a class="hiper_blue" href="">Techniki internetu - OSE IT Szkoła</a>
-            <div class="opis">Techniki internetu. Szkoła ponadpodstawowa, Nauczyciele. Kurs ma na celu zapoznanie uczestników z informacjami dotyczącymi internetu oraz możliwościami, ...</div>
+            <div class="opis">Techniki internetu. Szkoła ponadpodstawowa, Nauczyciele. Kurs ma na celu zapoznanie
+                uczestników z informacjami dotyczącymi internetu oraz możliwościami, ...</div>
         </div>
         <div class="wynik">
             <div class="link">
@@ -106,6 +107,43 @@
             <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod Erasmus
                 / ISCED: (brak ...</div>
         </div>
+        <div class="wynik">
+            <div class="link">
+                <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                <div class="triangle">
+                    <i class="fas fa-caret-down"></i>
+                </div>
+            </div>
+            <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+            <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod Erasmus
+                / ISCED: (brak ...</div>
+        </div>
+        <div class="wynik">
+            <div class="link">
+                <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                <div class="triangle">
+                    <i class="fas fa-caret-down"></i>
+                </div>
+            </div>
+            <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+            <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod Erasmus
+                / ISCED: (brak ...</div>
+        </div>
+        <div class="wynik">
+            <div class="link">
+                <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                <div class="triangle">
+                    <i class="fas fa-caret-down"></i>
+                </div>
+            </div>
+            <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+            <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod Erasmus
+                / ISCED: (brak ...</div>
+        </div>
+
 
 
     </div>
