Index.html initial commit

--- a/google/index.html
+++ b/google/index.html
@@ -8,143 +8,238 @@
 
 <body>
     <div>
-        <div class="gora">
+        <div class="results">
+            <div class="gora">
 
-            <a class="gora_zaloguj" href="">Zaloguj się</a>
-            <a href=""> <img class="points" src="points.svg"></a>
-            <a class="gora_napis" href="">Grafika</a>
-            <a class="gora_napis" href="">Gmail</a>
+                <a class="gora_zaloguj" href="">Zaloguj się</a>
+                <a href=""> <img class="points" src="points.svg"></a>
+                <a class="gora_napis" href="">Grafika</a>
+                <a class="gora_napis" href="">Gmail</a>
 
-            <div class="part1">
-                <img class="logo_zdj" src="Google_2015_logo.svg">
-                <div class="szukaj">
 
-                    <input class="wpis" type="text">
-                    <div class="x">
-                        <i class="fas fa-times"></i>
+                <div class="part1">
+                    <img class="logo_zdj" src="Google_2015_logo.svg">
+                    <div class="szukaj">
+
+                        <input class="wpis" type="text">
+                        <div class="x">
+                            <i class="fas fa-times"></i>
+                        </div>
+                        <div class="kreska">
+                            <i class="fas fa-grip-lines-vertical"></i>
+                        </div>
+                        <a href=""> <img class="klawa_icon" src="Keyboard.png"></a>
+                        <a href=""> <img class="mic_icon" src="Google_mic.svg"></a>
+                        <a href=""> <img class="szukaj_icon" src="Google_glass_blue.svg"></a>
                     </div>
-                    <div class="kreska">
-                        <i class="fas fa-grip-lines-vertical"></i>
-                    </div>
-                    <a href=""> <img class="klawa_icon" src="Keyboard.png"></a>
-                    <a href=""> <img class="mic_icon" src="Google_mic.svg"></a>
-                    <a href=""> <img class="szukaj_icon" src="Google_glass_blue.svg"></a>
                 </div>
+                <div class="kryteria">
+                    <a class="kryt1" href="">Wszystko</a>
+                    <a class="kryt" href="">Grafika</a>
+                    <a class="kryt" href="">Wideo</a>
+                    <a class="kryt" href="">Wiadomości</a>
+                    <a class="kryt" href="">Zakupy</a>
+                    <a class="kryt" href="">Więcej</a>
+                    <a class="kryt" href="">Ustawienia</a>
+                    <a class="kryt" href="">Narzędzia</a>
+                </div>
+
             </div>
             <div class="kryteria">
-                <a class="kryt1" href="">Wszystko</a>
-                <a class="kryt" href="">Grafika</a>
-                <a class="kryt" href="">Wideo</a>
-                <a class="kryt" href="">Wiadomości</a>
-                <a class="kryt" href="">Zakupy</a>
-                <a class="kryt" href="">Więcej</a>
-                <a class="kryt" href="">Ustawienia</a>
-                <a class="kryt" href="">Narzędzia</a>
+                <a class="kryt" href="">Około 84 600 000 wyników (0,76 s) </a>
             </div>
 
-        </div>
-        <div class="kryteria">
-            <a class="kryt" href="">Około 84 600 000 wyników (0,76 s) </a>
-        </div>
+            <div class="wynik">
+                <div class="link">
+                    <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                    <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                    <div class="triangle">
+                        <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+                <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+                <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod
+                    Erasmus
+                    / ISCED: (brak ...</div>
+            </div>
+            <div class="wynik">
+                <div class="link">
+                    <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                    <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                    <div class="triangle">
+                        <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+                <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW - USOS PW</a>
+                <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-INIIT-ISP-TIN, Kod
+                    Erasmus /
+                    ISCED: (brak ...</div>
+            </div>
+            <div class="wynik">
+                <div class="link">
+                    <a class="link1" href="">it-szkola.edu.pl</a>
+                    <a class="link2" href=""> › kkurs,kurs,21</a>
+                    <div class="triangle">
+                        <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+                <a class="hiper_blue" href="">Techniki internetu - OSE IT Szkoła</a>
+                <div class="opis">Techniki internetu. Szkoła ponadpodstawowa, Nauczyciele. Kurs ma na celu zapoznanie
+                    uczestników z informacjami dotyczącymi internetu oraz możliwościami, ...</div>
+            </div>
+            <div class="wynik">
+                <div class="link">
+                    <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                    <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                    <div class="triangle">
+                        <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+                <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+                <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod
+                    Erasmus
+                    / ISCED: (brak ...</div>
+            </div>
+            <div class="wynik">
+                <div class="link">
+                    <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                    <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                    <div class="triangle">
+                        <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+                <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+                <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod
+                    Erasmus
+                    / ISCED: (brak ...</div>
+            </div>
+            <div class="wynik">
+                <div class="link">
+                    <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                    <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                    <div class="triangle">
+                        <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+                <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+                <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod
+                    Erasmus
+                    / ISCED: (brak ...</div>
+            </div>
+            <div class="wynik">
+                <div class="link">
+                    <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                    <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                    <div class="triangle">
+                        <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+                <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+                <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod
+                    Erasmus
+                    / ISCED: (brak ...</div>
+            </div>
+            <div class="wynik">
+                <div class="link">
+                    <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                    <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                    <div class="triangle">
+                        <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+                <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+                <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod
+                    Erasmus
+                    / ISCED: (brak ...</div>
+            </div>
+            <div class="wynik">
+                <div class="link">
+                    <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                    <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                    <div class="triangle">
+                        <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+                <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+                <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod
+                    Erasmus
+                    / ISCED: (brak ...</div>
+            </div>
+            <div class="wynik">
+                <div class="link">
+                    <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                    <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                    <div class="triangle">
+                        <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+                <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+                <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod
+                    Erasmus
+                    / ISCED: (brak ...</div>
+            </div>
+            <div class="wynik">
+                <div class="link">
+                    <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
+                    <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
+                    <div class="triangle">
+                        <i class="fas fa-caret-down"></i>
+                    </div>
+                </div>
+                <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
+                <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod
+                    Erasmus
+                    / ISCED: (brak ...</div>
 
-        <div class="wynik">
-            <div class="link">
-                <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
-                <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
-                <div class="triangle">
-                    <i class="fas fa-caret-down"></i>
+            </div>
+            <div class="wynik">
+                <div class="podobne">Podobne wyszukiwania</div>
+            </div>
+            <div class="wiersz">
+                <div class="szare">
+                    <img class="szukaj_icon2" src="Google_Magnifying_Glass.svg">
+                    <a class="podobne_wynik" href="">Techniki internetu</a>
+                </div>
+                <div class="szare1">
+                    <img class="szukaj_icon2" src="Google_Magnifying_Glass.svg">
+                    <a class="podobne_wynik" href="">UTH Informatyka</a>
                 </div>
             </div>
-            <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
-            <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod Erasmus
-                / ISCED: (brak ...</div>
-        </div>
-        <div class="wynik">
-            <div class="link">
-                <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
-                <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
-                <div class="triangle">
-                    <i class="fas fa-caret-down"></i>
+            <div class="wiersz">
+                <div class="szare">
+                    <img class="szukaj_icon2" src="Google_Magnifying_Glass.svg">
+                    <a class="podobne_wynik" href="">Technologie internetowe przykłady</a>
+                </div>
+                <div class="szare1">
+                    <img class="szukaj_icon2" src="Google_Magnifying_Glass.svg">
+                    <a class="podobne_wynik" href="">UTH Warszawa informatyka opinie</a>
                 </div>
             </div>
-            <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW - USOS PW</a>
-            <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-INIIT-ISP-TIN, Kod Erasmus /
-                ISCED: (brak ...</div>
-        </div>
-        <div class="wynik">
-            <div class="link">
-                <a class="link1" href="">it-szkola.edu.pl</a>
-                <a class="link2" href=""> › kkurs,kurs,21</a>
-                <div class="triangle">
-                    <i class="fas fa-caret-down"></i>
+            <div class="wiersz">
+                <div class="szare">
+                    <img class="szukaj_icon2" src="Google_Magnifying_Glass.svg">
+                    <a class="podobne_wynik" href="">Informatyka online Warszawa</a>
+
+                </div>
+                <div class="szare1">
+                    <img class="szukaj_icon2" src="Google_Magnifying_Glass.svg">
+                    <a class="podobne_wynik" href="">UTH Informatyka rekrutacja</a>
                 </div>
             </div>
-            <a class="hiper_blue" href="">Techniki internetu - OSE IT Szkoła</a>
-            <div class="opis">Techniki internetu. Szkoła ponadpodstawowa, Nauczyciele. Kurs ma na celu zapoznanie
-                uczestników z informacjami dotyczącymi internetu oraz możliwościami, ...</div>
-        </div>
-        <div class="wynik">
-            <div class="link">
-                <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
-                <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
-                <div class="triangle">
-                    <i class="fas fa-caret-down"></i>
+            <div class="wiersz">
+                <div class="szare">
+                    <img class="szukaj_icon2" src="Google_Magnifying_Glass.svg">
+                    <a class="podobne_wynik" href="">UTH inżynieria oprogramowania</a>
+                </div>
+                <div class="szare1">
+                    <img class="szukaj_icon2" src="Google_Magnifying_Glass.svg">
+                    <a class="podobne_wynik" href="">UTH warszawa czesne</a>
                 </div>
             </div>
-            <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
-            <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod Erasmus
-                / ISCED: (brak ...</div>
-        </div>
-        <div class="wynik">
-            <div class="link">
-                <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
-                <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
-                <div class="triangle">
-                    <i class="fas fa-caret-down"></i>
-                </div>
-            </div>
-            <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
-            <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod Erasmus
-                / ISCED: (brak ...</div>
-        </div>
-        <div class="wynik">
-            <div class="link">
-                <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
-                <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
-                <div class="triangle">
-                    <i class="fas fa-caret-down"></i>
-                </div>
-            </div>
-            <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
-            <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod Erasmus
-                / ISCED: (brak ...</div>
-        </div>
-        <div class="wynik">
-            <div class="link">
-                <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
-                <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
-                <div class="triangle">
-                    <i class="fas fa-caret-down"></i>
-                </div>
-            </div>
-            <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
-            <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod Erasmus
-                / ISCED: (brak ...</div>
-        </div>
-        <div class="wynik">
-            <div class="link">
-                <a class="link1" href="">usosweb.usos.pw.edu.pl</a>
-                <a class="link2" href=""> › kontroler › pokazPrzedmiot</a>
-                <div class="triangle">
-                    <i class="fas fa-caret-down"></i>
-                </div>
-            </div>
-            <a class="hiper_blue" href="">Techniki internetowe - Przedmioty - USOSWEB PW</a>
-            <div class="opis">Techniki internetowe. Informacje ogólne. Kod przedmiotu: 103A-ETRTM-IWP-TINM, Kod Erasmus
-                / ISCED: (brak ...</div>
-        </div>
 
 
+
+        </div>
 
     </div>
     <div class="mainn">
