Index.html initial commit

--- a/google/index.html
+++ b/google/index.html
@@ -4,6 +4,8 @@
     <script src="https://kit.fontawesome.com/dd0ff15abc.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="styleresults.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,12 +24,9 @@
                     <div class="szukaj">
 
                         <input class="wpis" type="text">
-                        <div class="x">
-                            <i class="fas fa-times"></i>
-                        </div>
-                        <div class="kreska">
-                            <i class="fas fa-grip-lines-vertical"></i>
-                        </div>
+                        
+                        <a href=""> <img class="x" src="xxx.svg"></a>
+                        
                         <a href=""> <img class="klawa_icon" src="Keyboard.png"></a>
                         <a href=""> <img class="mic_icon" src="Google_mic.svg"></a>
                         <a href=""> <img class="szukaj_icon" src="Google_glass_blue.svg"></a>
@@ -236,7 +235,48 @@
                     <a class="podobne_wynik" href="">UTH warszawa czesne</a>
                 </div>
             </div>
+            <div class="spis">
+                <a class="g" href="">G</a>
+                <a class="oc" href="">o</a>
+                <a class="oz" href="">o</a>
+                <a class="oz" href="">o</a>
+                <a class="oz" href="">o</a>
+                <a class="oz" href="">o</a>
+                <a class="oz" href="">o</a>
+                <a class="oz" href="">o</a>
+                <a class="oz" href="">o</a>
+                <a class="oz" href="">o</a>
+                <a class="oz" href="">o</a>
+                <a class="g1" href="">g</a>
+                <a class="l" href="">l</a>
+                <a class="e" href="">e</a>
+            </div>
+            <div class="numery">
+                <a class="n1" href="">1</a>
+                <a class="n" href="">2</a>
+                <a class="n" href="">3</a>
+                <a class="n" href="">4</a>
+                <a class="n" href="">5</a>
+                <a class="n" href="">6</a>
+                <a class="n" href="">7</a>
+                <a class="n" href="">8</a>
+                <a class="n" href="">9</a>
+                <a class="n" href="">10</a>
+            </div>
 
+
+            <div class="stopka_gora">
+                <a class="element" id="country">Polska</a>
+                <a class="element" id="localization">&#11044 <b>Mazowieckie</b> - Z Twojego adresu internetowego - Użyj
+                    dokładnej lokalizacji - Dowiedz się więcej</a>
+            </div>
+
+            <div class="stopka_dol">
+                <a href="" class="element">Pomoc</a>
+                <a href="" class="element">Prześlij opinię</a>
+                <a href="" class="element">Prywatność</a>
+                <a href="" class="element">Warunki</a>
+            </div>
 
 
         </div>
@@ -280,8 +320,10 @@
                 <a class="lacze" href="">Ustawienia</a>
             </div>
         </div>
+
+
     </div>
-    </div>
+
 
 </html>
 
