--- a/google/index.html
+++ b/google/index.html
@@ -331,8 +331,8 @@
                     </div>
                 </div>
                 <div class="buttons">
-                    <button class="button">Szukaj w Google</p>
-                        <button class="button">Szczęśliwy traf</p>
+                    <button class="button">Jesteś może</p>
+                        <button class="button">dzisiejszą datą?</p>
                 </div>
             </div>
 
